<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/information_backgroud">

            <LinearLayout
                android:layout_width="373dp"
                android:layout_height="95dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="126dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgRoom"
                    android:layout_width="133dp"
                    android:layout_height="86dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/pic1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="87dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtNameRoom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:text="Phòng 1"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtDetailRoom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="20dp"
                        android:text="25 m^2 | Tối đa : 2 người lớn"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/txtCustomor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="20dp"
                        android:text="Khách: 2 người lớn"
                        android:textSize="12dp" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="115dp"
                android:background="#CCCCCC"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="388dp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="386dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/txtDateStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/black"
                    android:textSize="24dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="52dp"
                    android:layout_height="46dp"
                    android:src="@drawable/arrow" />

                <TextView
                    android:id="@+id/txtDateEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/black"
                    android:textSize="24dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sodemdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="1"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/cho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="164dp"
                android:text="14:00"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.064"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="164dp"
                android:text="12:00"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.542"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nguoidat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="164dp"
                android:text="đêm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.797"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="188dp"
                android:background="#CCCCCC"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp" />

            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="43dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="13dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2">

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Giá Tiền:"
                    android:textColor="@color/black"
                    android:textSize="28dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="250000"
                    android:textColor="@color/black"
                    android:textSize="28dp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="395dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/information_backgroud">

            <LinearLayout
                android:layout_width="405dp"
                android:layout_height="389dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="303dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="336dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/information"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtTen"
                    android:layout_width="246dp"
                    android:layout_height="29dp"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="336dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/firstName"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="302dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="72dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/edittext_border"
                    android:ems="10"
                    android:hint="Tên"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="336dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="302dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="34dp"
                    android:layout_marginEnd="72dp"
                    android:background="@drawable/edittext_border"
                    android:ems="10"
                    android:hint="Email"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/txtSDT"
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="336dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/sdt"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="302dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="34dp"
                    android:layout_marginEnd="72dp"
                    android:background="@drawable/edittext_border"
                    android:ems="10"
                    android:hint="Số Điện Thoại"
                    android:inputType="phone" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="267dp"
            android:layout_height="57dp"
            android:layout_marginLeft="70dp"
            android:fontFamily="sans-serif-light"
            android:text="Xác nhận đặt phòng"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="450dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>